--- a/index.html
+++ b/index.html
@@ -1,17 +1,60 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Honey</title>
 	<link href="css/fonts.css" rel="stylesheet">
-	<link href="css/reset.css" rel="stylesheet">S
+	<link href="css/reset.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
 </head>
+
 <body>
-    <h1>Finger licking honey!</h1>
-	
-	
+
+	<div class="wrapper">
+		<header class="header">
+			<div class="header__top">
+				<div class="container">
+					<div class="header__top-inner">
+						<a class="header__logo logo" href="#">
+							<img src="img/logo.svg" alt="Logo">
+						</a>
+						<nav class="header__nav">
+							<ul class="header__nav-list">
+								<li class="header__nav-item">
+									<a class="header__nav-link" href="#">Home</a>
+								</li>
+								<li class="header__nav-item">
+									<a class="header__nav-link" href="#">About</a>
+								</li>
+								<li class="header__nav-item">
+									<a class="header__nav-link" href="#">Our Product</a>
+								</li>
+								<li class="header__nav-item">
+									<a class="header__nav-link" href="#">Contact</a>
+								</li>
+							</ul>
+						</nav>
+					</div>
+				</div>
+			</div>
+			<div class="header__body">
+				<div class="container">
+					<div class="header__main">
+						<div class="header__content">
+
+						</div>
+					</div>
+				</div>
+			</div>
+		</header>
+
+	</div>
+	<h1>Finger licking honey!</h1>
+
+
 	<script src="js/script.js"></script>
 </body>
+
 </html>
