--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 				</div>
 			</div>
 			<div class="header__body">
-				<div class="container">
+				<div class="header__container">
 					<div class="header__main">
-						<div class="header__content">
-
+						<div class="header__content">	
+							<h1>Finger licking honey!</h1>
 						</div>
 					</div>
 				</div>
@@ -51,7 +51,6 @@
 		</header>
 
 	</div>
-	<h1>Finger licking honey!</h1>
 
 
 	<script src="js/script.js"></script>
