--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-
+	<img src="img/honey-1.png" class="honey-image-1">
 	<div class="wrapper">
 		<header class="header">
 			<div class="header__top">
@@ -42,8 +42,23 @@
 			<div class="header__body">
 				<div class="header__container">
 					<div class="header__main">
-						<div class="header__content">	
-							<h1>Finger licking honey!</h1>
+						<div class="header__content">
+							
+							<div class="finger-licking-honey">
+								<h2 class="finger-licking-honey-1">Finger</h2>
+								<h2 class="finger-licking-honey-2">licking</h2>
+								<h2 class="finger-licking-honey-3">honey!</h2>
+							</div>
+
+							<img src="img/bee-line.png" class="bee-line-img">
+
+							<div class="header__buttons">
+								<a href="#" class="header__btn button btn-black">Buy Now</a>
+								<a href="#" class="header__btn button btn-black-transparent">Learn More</a>
+							</div>
+
+							<img src="img/main.png" class="main-img" alt="Honey">
+
 						</div>
 					</div>
 				</div>
