completed block 'Our Product'

--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
 		<div class="main-content">
 			<div class="content-item">
 				<img src="img/honey-2.png">
-				
+
 				<div class="content-text">
 					<h4>Honey created in the laps of nature.</h4>
 					<p>Honey is one of the prime ingredients in your everyday food schedule. As a brand, you need a marketing
 						strategy that will help...</p>
-					<a href="#" class="header__btn button btn-orange">Learn More</a>
+					<a href="#" class="button btn-orange">Learn More</a>
 				</div>
 			</div>
 
@@ -90,10 +90,42 @@
 					<h4>Does your honey taste bad? Try us!</h4>
 					<p>Honey is one of the prime ingredients in your everyday food schedule. As a brand, you need a marketing
 						strategy that will help...</p>
-					<a href="#" class="header__btn button btn-orange">Learn More</a>
+					<a href="#" class="button btn-orange">Learn More</a>
 				</div>
 				<img src="img/honey-3.png">
-				
+
+			</div>
+		</div>
+
+		<div class="container-products container">
+			<div class="products-header">
+				<h4>Our Product</h4>
+				<a href="#">See all</a>
+			</div>
+			<div class="products">
+
+				<div class="product__item">
+					<div class="product__item-text">
+						<h5>Eucalyptus Honey</h5>
+						<p>It has the scent of lavender, medium sweetness lavender scented, and has a medium amber color.</p>
+						<a href="#" class="button btn-orange-transparent">Buy Now</a>
+					</div>
+					<div class="product__item-img">
+						<img src="img/product-1.png" alt="Eucalyptus Honey">
+					</div>
+				</div>
+
+				<div class="product__item">
+					<div class="product__item-text">
+						<h5>Basswood Honey</h5>
+						<p>Basswood is a tree native and abundant in Wisconsin, which is also known as the Linden tree.</p>
+						<a href="#" class="button btn-orange-transparent">Buy Now</a>
+					</div>
+					<div class="product__item-img">
+						<img src="img/product-2.png" alt="Basswood Honey">
+					</div>
+				</div>
+
 			</div>
 		</div>
 
