--- a/index.html
+++ b/index.html
@@ -129,10 +129,47 @@
 			</div>
 		</div>
 
+		<footer class="footer">
+			<div class="container">
+				<div class="container-footer">
+					
+					<a class="footer__item footer__logo logo" href="#">
+						<img src="img/black-logo.svg" alt="Logo">
+					</a>
+	
+					<div class="footer__item footer__text">
+						<p>Honey is one of the prime ingredients in your everyday food schedule.</p>
+					</div>
+	
+				<div class="footer__item social-networks">
+						<a class="" href="#">
+							<img src="img/f-ico.svg">
+						</a>
+						<a class="" href="#">
+							<img src="img/t-ico.svg">
+						</a>
+						<a class="" href="#">
+							<img src="img/g-ico.svg">
+						</a>
+						<a class="" href="#">
+							<img src="img/p-ico.svg">
+						</a>
+				</div>
+	
+					<div class="footer__item footer__apps">
+						<a class="footer__apps-google-play" href="#">
+							<img src="img/google-play.svg">
+						</a>
+						<a class="footer__apps-app-store" href="#">
+							<img src="img/app-store.svg">
+						</a>
+					</div>
+				</div>
+
+			</div>
+		</footer>
 
 	</div>
-
-
 	<script src="js/script.js"></script>
 </body>
 
